@@ -72,7 +72,7 @@ namespace CIAO_Shapes_Sender_comp_Impl
     //@}
 
   private:
-    /// Context for component instance. Uses for all middleware communication.
+    /// Context for component instance. Used for all middleware communication.
     ::Shapes::CCM_Sender_comp_Context_var ciao_context_;
     Sender_comp_exec_i &callback_;
   };
@@ -160,7 +160,7 @@ namespace CIAO_Shapes_Sender_comp_Impl
 
   };
 
-  /// Factory method and library entry point used by the middelware
+  /// Factory method and library entry point used by the middleware
   /// @return new component instance
   extern "C"  SHAPES_SENDER_COMP_EXEC_Export ::Components::EnterpriseComponent_ptr
   create_Shapes_Sender_comp_Impl (void);
